--- a/XamsungHealth/AppShell.xaml
+++ b/XamsungHealth/AppShell.xaml
@@ -12,6 +12,28 @@
     <!--  won't work if you move it to a style  -->
     <!--  issue elevation : https://github.com/xamarin/Xamarin.Forms/issues/5988  -->
 
+    <Shell.Resources>
+        <ResourceDictionary>
+            <Style x:Key="separator"
+                   TargetType="Line">
+                <Setter Property="X2" Value="{Binding Source={x:Reference mainStackLayout}, Path=Width}"/>
+                <Setter Property="Stroke" Value="Black"/>
+                <Setter Property="StrokeDashArray" Value="2 2"/>
+                <Setter Property="Margin" Value="0,5,0,0"/>
+            </Style>
+
+            <Style x:Key="badgeNewNoticeStyle"
+                   TargetType="xct:BadgeView">
+                <Setter Property="Margin" Value="0,-8,0,0"/>
+                <Setter Property="Text" Value="N"/>
+                <Setter Property="IsAnimated" Value="False"/>
+                <Setter Property="TextColor" Value="White"/>
+                <Setter Property="BackgroundColor" Value="#FF7200"/>
+                <Setter Property="FontSize" Value="9"/>
+            </Style>
+        </ResourceDictionary>
+    </Shell.Resources>
+
     <FlyoutItem>
         <Tab Title="Home">
             <Tab.Icon>
@@ -45,42 +67,43 @@
     </FlyoutItem>
 
     <Shell.FlyoutContent>
-        <pancakeview:PancakeView CornerRadius="0,30,0,30"
+        <pancakeview:PancakeView Padding="20,20,20,5"
+                                 CornerRadius="0,30,0,30"
                                  BackgroundColor="White">
-            <StackLayout>
-                <StackLayout Margin="10"
-                             VerticalOptions="Center"
-                             HorizontalOptions="Center"
-                             Spacing="25"
+            <StackLayout x:Name="mainStackLayout"
+                         Spacing="10">
+
+                <StackLayout Margin="0,8,0,30"
+                             Spacing="10"
                              Orientation="Horizontal">
-                    <Label>
+                    <Label VerticalOptions="Center"
+                           HorizontalOptions="StartAndExpand"
+                           VerticalTextAlignment="Center">
                         <Label.FormattedText>
                             <FormattedString>
                                 <FormattedString.Spans>
-                                    <Span Text="xamasung "
-                                          TextTransform="Uppercase"
+                                    <Span Text="XAMSUNG "
+                                          FontSize="17"
                                           FontAttributes="Bold"/>
-                                    <Span Text="Health"/>
+                                    <Span Text="Health"
+                                          FontSize="17"/>
                                 </FormattedString.Spans>
                             </FormattedString>
                         </Label.FormattedText>
                     </Label>
+
                     <controls:CircleIconView Source="https://avatars.githubusercontent.com/u/15718354?v=4"
-                                             Size="25"/>
+                                             Size="25"
+                                             HorizontalOptions="EndAndExpand"/>
 
-                    <xct:BadgeView Margin="0,-8,0,0"
-                                   FontSize="8"
-                                   Text="N"
-                                   IsAnimated="False"
-                                   TextColor="White"
-                                   BackgroundColor="#FF7200">
-
+                    <xct:BadgeView Style="{StaticResource badgeNewNoticeStyle}"
+                                   HorizontalOptions="End">
                         <ImageButton Margin="15,0,0,0"
                                      VerticalOptions="Center"
                                      BackgroundColor="Transparent">
                             <ImageButton.Source>
                                 <FontImageSource FontFamily="{x:Static fontawesome:IconFont._FontName}"
-                                                 Size="25"
+                                                 Size="20"
                                                  Glyph="{x:Static fontawesome:IconFont.Cog}"
                                                  Color="Gray"/>
                             </ImageButton.Source>
@@ -88,6 +111,48 @@
                     </xct:BadgeView>
                 </StackLayout>
 
+                <Line Style="{StaticResource separator}"/>
+
+                <StackLayout>
+                    <StackLayout.Resources>
+                        <ResourceDictionary>
+                            <Style TargetType="Label">
+                                <Setter Property="Margin" Value="10,12"/>
+                                <Setter Property="FontSize" Value="17"/>
+                            </Style>
+                        </ResourceDictionary>
+                    </StackLayout.Resources>
+
+                    <Label Text="Profile"/>
+                    <Label Text="Achievements"/>
+                    <Label Text="Weekly summary"/>
+                    <Line Style="{StaticResource separator}"/>
+
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="For you"
+                               VerticalOptions="Start"
+                               VerticalTextAlignment="Center"/>
+                        <xct:BadgeView Margin="0,10,15,0"
+                                       Style="{StaticResource badgeNewNoticeStyle}"
+                                       HorizontalOptions="EndAndExpand"/>
+                    </StackLayout>
+                    <Label Text="Events"/>
+                    <Line Style="{StaticResource separator}"/>
+
+
+                    <Label Text="Accesssories"/>
+                    <Label Text="Notices"/>
+                </StackLayout>
+
+                <Button Text="Sync now"
+                        VerticalOptions="EndAndExpand"
+                        BackgroundColor="LightGray"
+                        CornerRadius="30"
+                        TextTransform="None"/>
+                <Label TextColor="Gray"
+                       HorizontalOptions="Center"
+                       FontSize="10"
+                       Text="Last synced on .. at .."/>
             </StackLayout>
         </pancakeview:PancakeView>
     </Shell.FlyoutContent>
