Refactoring, small tweak

--- a/XamsungHealth/App.xaml
+++ b/XamsungHealth/App.xaml
@@ -7,6 +7,11 @@
 
     <Application.Resources>
         <ResourceDictionary>
+
+            <x:Double x:Key="DescriptionFontSize">
+                13
+            </x:Double>
+
             <!--  region Colors  -->
             <Color x:Key="MainBackgroundColor">
                 WhiteSmoke
