--- a/XamsungHealth/Views/Flyout/SettingsPage.xaml
+++ b/XamsungHealth/Views/Flyout/SettingsPage.xaml
@@ -13,131 +13,13 @@
              Shell.TabBarIsVisible="false">
 
     <ContentPage.Resources>
-        <ResourceDictionary>
-            <Thickness x:Key="HorizontalMargin">
-                20,0,10,0
-            </Thickness>
+        <ResourceDictionary Source="../../Templates/MenuTemplates.xaml"/>
 
-            <Thickness x:Key="Padding">
-                10
-            </Thickness>
-
-            <Thickness x:Key="SeparatorMargin">
-                25,0
-            </Thickness>
-
-            <x:Double x:Key="SeparatorOpacity">
-                0.45
-            </x:Double>
-
-            <CornerRadius x:Key="CornerRadiusTop">
-                30,30,0,0
-            </CornerRadius>
-
-            <CornerRadius x:Key="CornerRadiusBottom">
-                0,0,30,30
-            </CornerRadius>
-
-            <x:Double x:Key="TitleFontSize">
-                17
-            </x:Double>
-
-            <DataTemplate x:Key="FirstItemDataTemplate"
-                          x:DataType="views:SettingItem">
-                <pancakeview:PancakeView xct:TouchEffect.NativeAnimation="True"
-                                         xct:TouchEffect.ShouldMakeChildrenInputTransparent="False"
-                                         CornerRadius="{StaticResource CornerRadiusTop}"
-                                         BackgroundColor="White">
-                    <StackLayout Spacing="5"
-                                 InputTransparent="False">
-                        <Grid Margin="{StaticResource HorizontalMargin}"
-                              Padding="{StaticResource Padding}">
-                            <StackLayout InputTransparent="True">
-                                <Label Text="{Binding Title}"
-                                       FontSize="{StaticResource TitleFontSize}"/>
-                                <Label Text="{Binding Description}"
-                                       IsVisible="{Binding Description, Converter={xct:IsNotNullOrEmptyConverter}}"
-                                       FontSize="{StaticResource DescriptionFontSize}"
-                                       TextColor="Gray"/>
-                            </StackLayout>
-                            <Switch HorizontalOptions="End"
-                                    OnColor="SpringGreen"
-                                    ThumbColor="LightGray"
-                                    IsVisible="{Binding HaveSwitch}"/>
-                        </Grid>
-
-                        <BoxView Margin="{StaticResource SeparatorMargin}"
-                                 VerticalOptions="End"
-                                 HeightRequest="1"
-                                 Opacity="{StaticResource SeparatorOpacity}"
-                                 HorizontalOptions="Fill"
-                                 Color="LightGray"/>
-                    </StackLayout>
-                </pancakeview:PancakeView>
-            </DataTemplate>
-
-            <DataTemplate x:Key="MiddleItemDataTemplate"
-                          x:DataType="views:SettingItem">
-                <StackLayout xct:TouchEffect.NativeAnimation="True"
-                             xct:TouchEffect.ShouldMakeChildrenInputTransparent="False"
-                             Spacing="5"
-                             BackgroundColor="White">
-                    <Grid Margin="{StaticResource HorizontalMargin}"
-                          Padding="{StaticResource Padding}"
-                          InputTransparent="False">
-                        <StackLayout InputTransparent="True">
-                            <Label Text="{Binding Title}"
-                                   FontSize="{StaticResource TitleFontSize}"/>
-                            <Label Text="{Binding Description}"
-                                   IsVisible="{Binding Description, Converter={xct:IsNotNullOrEmptyConverter}}"
-                                   FontSize="{StaticResource DescriptionFontSize}"
-                                   TextColor="Gray"/>
-                        </StackLayout>
-                        <Switch HorizontalOptions="End"
-                                OnColor="SpringGreen"
-                                ThumbColor="LightGray"
-                                IsVisible="{Binding HaveSwitch}"/>
-                    </Grid>
-                    <BoxView Margin="{StaticResource SeparatorMargin}"
-                             VerticalOptions="End"
-                             HeightRequest="1"
-                             Opacity="{StaticResource SeparatorOpacity}"
-                             HorizontalOptions="Fill"
-                             Color="LightGray"/>
-                </StackLayout>
-            </DataTemplate>
-
-            <DataTemplate x:Key="LastItemDataTemplate"
-                          x:DataType="views:SettingItem">
-                <pancakeview:PancakeView xct:TouchEffect.NativeAnimation="True"
-                                         xct:TouchEffect.ShouldMakeChildrenInputTransparent="False"
-                                         CornerRadius="{StaticResource CornerRadiusBottom}"
-                                         BackgroundColor="White">
-                    <Grid Margin="{StaticResource HorizontalMargin}"
-                          Padding="{StaticResource Padding}"
-                          InputTransparent="False">
-                        <StackLayout>
-                            <Label Text="{Binding Title}"
-                                   FontSize="{StaticResource TitleFontSize}"/>
-                            <Label Text="{Binding Description}"
-                                   IsVisible="{Binding Description, Converter={xct:IsNotNullOrEmptyConverter}}"
-                                   FontSize="{StaticResource DescriptionFontSize}"
-                                   TextColor="Gray"/>
-                        </StackLayout>
-                        <Switch OnColor="SpringGreen"
-                                HorizontalOptions="End"
-                                ThumbColor="LightGray"
-                                IsVisible="{Binding HaveSwitch}"/>
-                    </Grid>
-                </pancakeview:PancakeView>
-            </DataTemplate>
-
-            <xamsunghealth:SettingsItemDataTemplateSelector x:Key="SettingsItemDataTemplateSelector"
-                                                            FirstItemDataTemplate="{StaticResource FirstItemDataTemplate}"
-                                                            MiddleItemDataTemplate="{StaticResource MiddleItemDataTemplate}"
-                                                            LastItemDataTemplate="{StaticResource LastItemDataTemplate}"/>
-
-        </ResourceDictionary>
+        <!--  TODo: if put inside MenuTemplates it will thow StaticResource not found for key MenuTemplates  -->
+        <xamsunghealth:SettingsItemDataTemplateSelector x:Key="SettingsItemDataTemplateSelector"
+                                                        FirstItemDataTemplate="{StaticResource FirstItemDataTemplate}"
+                                                        MiddleItemDataTemplate="{StaticResource MiddleItemDataTemplate}"
+                                                        LastItemDataTemplate="{StaticResource LastItemDataTemplate}"/>
     </ContentPage.Resources>
 
     <CollectionView IsGrouped="True"
